--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,19 @@ p {
   padding: 0;
 }
 
+ul {
+  padding-inline-start: 0px;
+}
+
 li {
   list-style: none;
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .backplate {
@@ -29,4 +40,32 @@ li {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.header {
+  color: #eeeeee;
+}
+
+.info {
+  max-width: 50%;
+  color: #eeeeee;
+}
+.info p {
+  margin-top: 1rem;
+}
+
+.perfil {
+  border-radius: 50%;
+  background-color: aquamarine;
+}
+
+.caption {
+  color: #eeeeee;
+  text-align: center;
+}
+
+.socials {
+  margin-top: 2rem;
+  display: flex;
+  gap: 1rem;
 }
