--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   color: #eeeeee;
+  background: linear-gradient(135deg, #0a0412, #961ee7);
 }
 
 body,
@@ -30,9 +31,13 @@ img {
   height: auto;
 }
 
+summary {
+  list-style: none;
+}
+
 .backplate {
   display: grid;
-  background-color: blueviolet;
+  /* background-color: blueviolet; */
   padding: 1rem;
 }
 
@@ -77,6 +82,9 @@ main .container {
   height: 3rem;
 }
 
+#projetos {
+  padding-bottom: 2rem;
+}
 .projetos-titulo {
   background-color: rgb(100, 25, 170);
   margin: 3rem auto;
@@ -93,4 +101,22 @@ main .container {
   align-items: center;
   gap: 1rem;
   flex-wrap: wrap;
+}
+
+.agradecimentos {
+  margin: 2rem auto;
+  background-color: rgb(100, 25, 170);
+  border-radius: 1rem;
+  max-width: 52ch;
+}
+.agradecimentos summary {
+  padding: 1.4rem 2rem;
+}
+details p {
+  margin-top: 1rem;
+  padding: 1rem 2rem;
+  text-align: center;
+}
+details p::before {
+  content: "";
 }
