--- a/styles/style.css
+++ b/styles/style.css
@@ -134,8 +134,8 @@ header.backplate {
 }
 
 main {
-  height: calc(100vh - 8rem);
-  max-height: 200vh;
+  min-height: calc(100vh - 8rem);
+  max-height: calc(120vh - 8rem);
 }
 main .container {
   margin: 2rem auto;
@@ -152,6 +152,10 @@ main .container {
   margin-top: 1rem;
   max-width: 50ch;
   font-size: 1.4rem;
+}
+
+.perfil-container {
+  margin: 0 auto;
 }
 
 .perfil {
@@ -320,7 +324,7 @@ details p::before {
   box-shadow: 0 0 0 2px #aaaaaa;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
   .rev {
     flex-wrap: wrap-reverse;
   }
@@ -328,4 +332,30 @@ details p::before {
     max-width: 100%;
     text-align: center;
   }
+  .perfil {
+    max-width: 200px;
+    max-height: 200px;
+  }
+  .info {
+    margin: 0 auto;
+    max-width: 100%;
+  }
+  .info h1 {
+    font-size: 2rem;
+    margin-top: 1rem;
+  }
+  .info p {
+    margin-top: 1rem;
+    max-width: 50ch;
+    font-size: 1rem;
+  }
 }
+/* @media (max-width: 600px) {
+  .rev {
+    flex-wrap: wrap-reverse;
+  }
+  .info {
+    max-width: 100%;
+    text-align: center;
+  }
+} */
