--- a/styles/style.css
+++ b/styles/style.css
@@ -279,7 +279,7 @@ ol {
 #projetos div.container {
   display: grid;
 }
-.botao {
+.botao-mais {
   margin: 2rem auto;
   padding: 1.4rem 2rem;
   border: none;
@@ -289,7 +289,7 @@ ol {
   font-weight: bold;
   color: #eeeeee;
 }
-.botao:hover {
+.botao-mais:hover {
   cursor: pointer;
   transform: scale(1.1);
   transition: 0.2s;
